[gd_scene load_steps=11 format=3 uid="uid://biuatccwj4dps"]

[ext_resource type="Script" path="res://src/scenes/guilds/Guilds.gd" id="1_mkgck"]
[ext_resource type="Texture2D" uid="uid://doabnfyf3t2xc" path="res://art/backgrounds/house/Bilbos_House_Phone_0000.png" id="2_ro6tg"]
[ext_resource type="Texture2D" uid="uid://2cq7sowc86m8" path="res://art/backgrounds/cave.png" id="3_1idfv"]
[ext_resource type="PackedScene" uid="uid://cgjx1pxshcry7" path="res://src/scenes/guilds/Search.tscn" id="3_1kup0"]
[ext_resource type="PackedScene" uid="uid://djehfqq6xak8y" path="res://src/scenes/guilds/Create.tscn" id="4_4fm0c"]
[ext_resource type="PackedScene" uid="uid://7cofox06cmk6" path="res://src/scenes/guilds/View.tscn" id="5_e3kc6"]

[sub_resource type="Shader" id="Shader_2wmes"]
code = "shader_type canvas_item;

// Amount of detail.
uniform int octaves = 4;

// Opacity of the output fog.
uniform float starting_amplitude: hint_range(0.0, 0.5) = 0.5;

// Rate of pattern within the fog.
uniform float starting_frequency = 1.0;

// Shift towards transparency (clamped) for sparser fog.
uniform float shift: hint_range(-1.0, 0.0) = -0.2;

// Direction and speed of travel.
uniform vec2 velocity = vec2(1.0, 1.0);

// Color of the fog.
uniform vec4 fog_color: source_color = vec4(0.0, 0.0, 0.0, 1.0);

// Noise texture; OpenSimplexNoise is great, but any filtered texture is fine.
uniform sampler2D noise;

float rand(vec2 uv) {
	float amplitude = starting_amplitude;
	float frequency = starting_frequency;
	float output = 0.0;
	for (int i = 0; i < octaves; i++) {
		output += texture(noise, uv * frequency).x * amplitude;
		amplitude /= 2.0;
		frequency *= 2.0;
	}
	return clamp(output + shift, 0.0, 1.0);
}

void fragment() {
	vec2 motion = vec2(rand(UV + 0.15 * cos(TIME) * starting_frequency * velocity));
	COLOR = mix(vec4(0.0), fog_color, rand(UV + motion));
}"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5khft"]
seed = 69
frequency = 0.001
fractal_type = 2
fractal_octaves = 4
fractal_lacunarity = 12.0
fractal_gain = 0.3
fractal_weighted_strength = 0.45

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qyb2i"]
width = 513
noise = SubResource("FastNoiseLite_5khft")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fjovy"]
shader = SubResource("Shader_2wmes")
shader_parameter/octaves = 4
shader_parameter/starting_amplitude = 0.5
shader_parameter/starting_frequency = 0.699
shader_parameter/shift = -0.205
shader_parameter/velocity = Vector2(1, 1)
shader_parameter/fog_color = Color(1, 0.768627, 0.772549, 1)
shader_parameter/noise = SubResource("NoiseTexture2D_qyb2i")

[node name="Guilds" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mkgck")

[node name="Back" type="TextureRect" parent="."]
self_modulate = Color(0.780392, 0.513726, 0.752941, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ro6tg")
expand_mode = 5

[node name="Fog" type="TextureRect" parent="Back"]
material = SubResource("ShaderMaterial_fjovy")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1idfv")

[node name="Search" parent="." instance=ExtResource("3_1kup0")]
visible = false
layout_mode = 1
offset_top = 120.0
offset_bottom = 120.0

[node name="Create" parent="." instance=ExtResource("4_4fm0c")]
visible = false
layout_mode = 1
anchors_preset = -1
offset_top = 200.0

[node name="View" parent="." instance=ExtResource("5_e3kc6")]
layout_mode = 1
anchors_preset = -1
offset_top = 100.0

[node name="GetCurrGuild" type="HTTPRequest" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="show_creation" from="Search" to="." method="_on_search_show_creation"]
[connection signal="show_view" from="Search" to="." method="_on_search_show_view"]
[connection signal="visibility_changed" from="Search" to="." method="_on_search_visibility_changed"]
[connection signal="show_search" from="Create" to="." method="_on_create_show_search"]
[connection signal="show_view" from="Create" to="." method="_on_create_show_view"]
[connection signal="visibility_changed" from="Create" to="." method="_on_create_visibility_changed"]
[connection signal="show_search" from="View" to="." method="_on_view_show_search"]
[connection signal="visibility_changed" from="View" to="." method="_on_view_visibility_changed"]
[connection signal="request_completed" from="GetCurrGuild" to="." method="_on_get_curr_guild_request_completed"]
